# Super_Mario_PYGAMECE

./: .gitignore  .ignore  CONVERSION_NOTES.md  README.md  check.bat  check_dynamic_sprites.py  check_sprites.py  pyproject.toml  run.bat  simulation_logger.py
assets/levels/: 1-1.json  1-1_from_bmp.json  1-1b.json  1-2.json  1-2a.json  1-2b.json  1-2c.json  1-3.json  1-4.json  2-1.json  2-2.json  2-3.json  2-4.json  3-1.json  3-2.json  3-3.json  3-4.json  4-1.json  4-2.json  4-3.json  4-4.json  5-1.json  5-2.json  5-3.json  5-4.json  6-1.json  6-2.json  6-3.json  6-4.json  7-1.json  7-2.json  7-3.json  7-4.json  8-1.json  8-2.json  8-3.json  8-4.json  custom_level.json  test_castle_axe.json  test_enemies_all.json  (+3 more)
assets/levels_old_backup/: 1-3.json
assets/processed/atlases/: README.md  atlases.json  atlases.json.backup  ui_font.json
docs/: FEATURE_PARITY.md
python_src/super_mario_pygamece/: __init__.py  app.py  assets.py  atlas.py  audio.py  cli.py  collision.py  diagnostics.py  enemy.py  enemy_ai.py  entities.py  game.py  level.py  paths.py  physics.py  player.py  renderer.py  settings.py  theme.py  ui_font.py  world.py
tests/: manual_check_sprites.py  manual_inspect_levels.py  manual_smoke_play.py  test_app.py  test_atlas.py  test_cli.py  test_collision.py  test_diagnostics.py  test_enemy_traits.py  test_level.py  test_paths.py  test_player_enemy.py  test_public_modules.py  test_world.py
