[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-mario-pygamece"
version = "0.1.0"
description = "Standalone Pygame CE port that reuses Super_Mario_SDL3 assets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "pytest>=8.3",
    "ruff>=0.11",
]

[project.scripts]
super-mario-pygamece = "super_mario_pygamece.__main__:main"

[tool.setuptools]
package-dir = {"" = "python_src"}

[tool.setuptools.packages.find]
where = ["python_src"]

[tool.setuptools.package-data]
super_mario_pygamece = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tmp*"]
